@@ -5,6 +5,9 @@ console-setup (1.36) UNRELEASED; urgency=low
     configuration file.
   * Remove obsoleted sentence from the README file.
   * Update Keyboard/ckb directory.
+  * Rearrange the code in config.proto to make easier to specify
+    selectively the priority of the layout question depending on the
+    source of the default value.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Fri, 15 May 2009 21:41:13 +0300
 
